--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "styled-components": "^5.3.11",
     "swiper": "^10.3.1",
     "web-vitals": "^2.1.4"
